--- a/Movies/Properties/launchSettings.json
+++ b/Movies/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "movies",
+      "launchUrl": "movies/GetAll",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "Movies": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "movies",
+      "launchUrl": "movies/GetAll",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
